--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 header {
   position: relative;
   height: 70px;
-  background-color: rgb(55, 66, 114);
+  background-color: #b46c43c2;
   padding: 5px 50px;
   position: sticky;
   top: 0;
@@ -31,20 +31,53 @@ header nav ul li a {
   vertical-align: middle;
   line-height: 70px;
 }
-
+.info {
+  padding: 50px;
+  margin-top: -10px;
+  background-color: #a78e45;
+}
+.info h3 {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: white;
+}
+.info div {
+  float: left;
+  width: 33%;
+  text-align: center;
+}
+.info::after {
+  content: '';
+  clear: both;
+  display: table;
+}
+.info div ul li {
+  font-size: 18px;
+  margin-bottom: 20px;
+  line-height: 1.5;
+}
+.info div ul ul li {
+  display: inline-block;
+}
+.info div ul ul li a {
+  font-size: 30px;
+  margin: 0 20px;
+  color: white;
+}
 .hero-area {
   position: relative;
 }
 .hero-area img {
   width: 100%;
-  height: 500px;
+  height: 600px;
   /* background-size: cover; */
   object-fit: cover;
 }
 .black-layer {
   position: absolute;
   width: 100%;
-  height: 500px;
+  height: 600px;
   background: rgba(0, 0, 0, 0.41);
 }
 .hero-area h1 {
