--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ header nav ul li a {
 .info {
   padding: 50px;
   margin-top: -10px;
-  background-color: #a78e45;
+  background-color: #cf5f36;
 }
 .info h3 {
   font-size: 25px;
