--- a/css/sales.css
+++ b/css/sales.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(231, 231, 231);
-  height: 2000px;
+
   font-family: 'Kiwi Maru', serif;
 
   /* font-family: 'Montserrat', sans-serif; */
@@ -42,6 +42,7 @@ header nav ul li a {
 table {
   border: solid 1px #333;
   margin: 0px auto;
+  margin-bottom: 100px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   width: 90%;
